rev 472 (2016-04-18) (krueschan)
- temporarily disabled settings for LULUCF inclusion in country report for public version (it's still present in the -dev version)

rev 471 (2016-04-14) (krueschan)
- further revisions to splash page (R-C weight is now a slider)
- hotlinked to "cloud-hosted" versions of jquery code (on code.jquery.com) instead of locally hosted files

rev 470 (2016-04-11) (krueschan)
- changed elements on the Equity Splash page around (now responsibiliy and capability on the 3x3 equity dial pad)
- now using a svg version of the logo instead of png for cleaner rendering

rev 469 (2015-10-16) (krueschan)
- added new logo to header branding and amended css to play nice with it

rev 468 (2015-10-10) (krueschan)
- fixed small bug in pledge description that got introduced in the partial commit in rev 466

rev 467 (2015-10-08) (krueschan)
- advanced Excel download: suppress output for regions and world if countries are specified; otherwise nonsensical output
- changed the default for the display year in the country report to 2030
- fixed a bug where greenline was always zero

rev 466 (2015-10-08) (krueschan)
- glossary_array.php now outputs html of a glossary item (if passed the html=1 URL parameter), with a <h3> formatted label, unless noheader=1 is specified (mainly for use in tooltip wordpress plugin)
- updated jQuery code to version 1.6.4
- minor css tweaks
- for the dev calc, if people attempt (but fail) to login to the dev version of the calculator, they are now shown an error message telling them what's going on and where the public version of the calculator is found (and redirect there after 15s delay).
- favicons in various resolutions
- advanced Excel download now takes a mix of individual years and year ranges, sort of supercedes "dl_min_year" and "dl_max_year", but I keep those around for legacy reasons (there are download scripts that use them)