@@ -1,9 +1,9 @@
 <div id="nav">
     <ul class="group">
-        <li><a href="http://<?php echo $main_domain_host; ?>/the-climate-equity-reference-project" target="_blank">About the Climate Equity Reference Project</a></li>
-        <li><a href="http://<?php echo $main_domain_host; ?>/calculator-about" target="_blank">About the Climate Equity Reference Calculator</a></li>
+        <li><a href="https://<?php echo $main_domain_host; ?>/the-climate-equity-reference-project" target="_blank">About the Climate Equity Reference Project</a></li>
+        <li><a href="https://<?php echo $main_domain_host; ?>/calculator-about" target="_blank">About the Climate Equity Reference Calculator</a></li>
 <!--        <li><a href="<?php echo $scorecard_home_url;?>" target="_blank">Climate Equity Pledge Scorecard</a></li>-->
-        <li class="last"><a href="http://<?php echo $main_domain_host;?>/documentation-glossary-help/" target="_blank">Online Documentation, Glossary, Help</a></li>
+        <li class="last"><a href="https://<?php echo $main_domain_host;?>/documentation-glossary-help/" target="_blank">Online Documentation, Glossary, Help</a></li>
 <!--        <li class="last"><a href="http://gdrights.org/about" target="_blank">About Greenhouse Development Rights</a></li>-->
     </ul>
 </div><!-- end #nav -->
