@@ -6,12 +6,12 @@ ErrorDocument 401 /not-logged-in.php
 <html>
 <head>
 <title>401 Authorization Required</title>
-<META HTTP-EQUIV="refresh" CONTENT="15;URL=http://calculator.climateequityreference.org">
+<META HTTP-EQUIV="refresh" CONTENT="15;URL=https://calculator.climateequityreference.org">
 </head>
 <body>
 <h2> 401 Authorization Required</h2>
-The site that you tried to access is for developers only. <br>
-The public version of the Climate Equity Reference Calculator is can be found at <a href='http://calculator.climateequityreference.org'>http://calculator.climateequityreference.org</a> (we will take you there shortly).<br>
-If you have been directed here by a link, please <a href='http://climateequityreference.org/ticket'>let us know about it</a>.
+The site that you tried to access is for developers only. If you are a developer, <a href='https://calculator-dev.climateequityreference.org'>click here</a> to try again.<br>
+The public version of the Climate Equity Reference Calculator is can be found at <a href='https://calculator.climateequityreference.org'>https://calculator.climateequityreference.org</a> (we will take you there shortly).<br>
+If you have been directed here by a link, please <a href='https://climateequityreference.org/ticket'>let us know about it</a>.
 </body>
 </html>
